cleaning up bulkscan main